--- a/css/base/main.css
+++ b/css/base/main.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: Roboto;
+  src: url(../..fonts/Roboto/static/Roboto-Regular.ttf);
+  font-weight: normal;
+  font-style: normal;
+
+}
+@font-face {
+  font-family: Roboto;
+  src: url(../..fonts/Roboto/static/Roboto-Bold.ttf);
+  font-weight: bold;
+  font-style: normal;
+
+}
+
 body,
 body * {
   margin: 0;
@@ -6,7 +21,7 @@ body * {
 }
 
 body {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Roboto, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .bg-blue {
