--- a/css/base/main.css
+++ b/css/base/main.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: Roboto;
-  src: url(../..fonts/Roboto/static/Roboto-Regular.ttf);
+  src: url(../../fonts/Roboto/static/Roboto-Regular.ttf);
   font-weight: normal;
   font-style: normal;
 
 }
 @font-face {
   font-family: Roboto;
-  src: url(../..fonts/Roboto/static/Roboto-Bold.ttf);
+  src: url(../../fonts/Roboto/static/Roboto-Bold.ttf);
   font-weight: bold;
   font-style: normal;
 
@@ -37,4 +37,11 @@ body {
 
 .center {
   text-align: center;
+}
+
+.hero {
+  background-image: url(../../img/hero.png);
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
 }
