--- a/css/base/main.css
+++ b/css/base/main.css
@@ -3,14 +3,12 @@
   src: url(../../fonts/Roboto/static/Roboto-Regular.ttf);
   font-weight: normal;
   font-style: normal;
-
 }
 @font-face {
   font-family: Roboto;
   src: url(../../fonts/Roboto/static/Roboto-Bold.ttf);
   font-weight: bold;
   font-style: normal;
-
 }
 
 body,
@@ -21,7 +19,8 @@ body * {
 }
 
 body {
-  font-family: Roboto, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: Roboto, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+    sans-serif;
 }
 
 .bg-blue {
@@ -40,8 +39,11 @@ body {
 }
 
 .hero {
+  min-height: 100vh;
+  justify-content: center;
   background-image: url(../../img/hero.png);
   background-position: center;
   background-attachment: fixed;
+  background-repeat: no-repeat;
   background-size: cover;
 }
