--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -18,8 +18,10 @@
   gap: 20px;
   width: 600px;
 }
-
-.container .left-column {
+.container .column {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
   width: 50%;
 }
 .container .right-column {
