--- a/css/pages/comming-soon.css
+++ b/css/pages/comming-soon.css
@@ -1,3 +1,5 @@
 @import '../base/main.css';
 @import '../base/layout.css';
 @import '../components/clock.css';
+@import '../components/progress-bar.css';
+@import '../components/mouse.css';
