--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -18,6 +18,7 @@
   gap: 20px;
   width: 600px;
 }
+
 .container .column {
   display: flex;
   flex-direction: column;
@@ -47,7 +48,7 @@
     flex-direction: column;
   }
 
-  .container .left-column,
+  .container .column,
   .container .right-column {
     width: 100%;
   }
