--- a/css/base/main.css
+++ b/css/base/main.css
@@ -49,22 +49,37 @@ body {
 }
 
 footer {
+  color: #fffc;
+}
+
+footer a  {
   color: #fff;
+  text-decoration: none
 }
 
 .trio {
   display: flex;
-  gap: 0.7rem;
+  gap: 1rem;
   align-items: center;
   justify-content: center;
 }
+
+.trio > p {
+  position: relative;
+}
+
+
 .trio > p::after {
   content: '';
-  display: inline-block;
-  width: 2px;
+  display: block;
+  width: 0.1rem;
   height: 1em;
   margin-left: 0.7rem;
   background-color: #fff;
+  position: absolute;
+  top: 50%;
+  right: -0.55rem;
+  transform: translateY(-50%);
   
 }
 .trio > p:last-child::after {
