--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -2,64 +2,64 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 2rem;
   width: 100%;
-  padding: 60px 0;
+  padding: 4rem 0;
 }
 .container > .row {
   display: flex;
   justify-content: space-between;
-  row-gap: 60px;
-  width: 1000px;
+  width: 62rem;
+  row-gap: 4rem;
+  position: relative;
 }
+
 .container > .row-short {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  width: 600px;
+  align-items: center;
+  width: 38rem;
+  gap: 1.5rem;
 }
-
-.container .column {
+.container .left-column,
+.container .right-column {
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  width: 50%;
 }
 .container .right-column {
   width: 40%;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 69rem) {
   .container > .row {
-    width: 800px;
+    width: 50rem;
+  }
+}
+@media (max-width: 56rem) {
+  .container > .row {
+    width: 38rem;
   }
 }
 
-@media (max-width: 900px) {
-  .container > .row {
-    width: 600px;
-  }
-}
-
-@media (max-width: 700px) {
+@media (max-width: 44rem) {
   .container > .row,
   .container > .row-short {
-    width: 400px;
+    width: 25rem;
     flex-direction: column;
   }
-
-  .container .column,
+  .container .left-column,
   .container .right-column {
     width: 100%;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 31rem) {
   .container {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
-
   .container > .row,
   .container > .row-short {
     width: 100%;
