--- a/css/base/main.css
+++ b/css/base/main.css
@@ -4,6 +4,7 @@
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face {
   font-family: Roboto;
   src: url(../../fonts/Roboto/static/Roboto-Bold.ttf);
@@ -11,15 +12,19 @@
   font-style: normal;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body,
 body * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
-  font-family: Roboto, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+  font-family: Roboto, "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
     sans-serif;
 }
 
@@ -28,7 +33,7 @@ body {
 }
 
 .logo {
-  height: 40px;
+  height: 2.5rem;
   width: 100%;
   object-fit: contain;
   object-position: center;
@@ -40,10 +45,10 @@ body {
 
 .hero {
   min-height: 100vh;
-  justify-content: center;
   background-image: url(../../img/hero.png);
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  justify-content: center;
 }
