--- a/css/components/socials.css
+++ b/css/components/socials.css
@@ -1,25 +1,27 @@
 .socials {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 0.2rem;
-    width: 100%;
-    padding: 1rem 0;
-    border-bottom: 0.1rem solid #fff;
-  }
-  .socials > a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 3rem;
-    height: 3rem;
-    color: #fff;
-    border-radius: 50%;
-    text-decoration: none;
-    background-color: #fff0;
-    transition: all 0.3s;
-  }
-  .socials > a:hover {
-    background-color: #ec1d61;
-  }
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 1rem 0;
+  border-bottom: 0.1rem solid #fff;
+  gap: 0.2rem;
+}
+
+.socials > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  text-decoration: none;
+  transition: all 0.3s;
+  color: #fff;
+}
+
+.socials > a:hover {
+  background-color: #e52163;
+  text-decoration: none;
+}
