--- a/css/pages/comming-soon.css
+++ b/css/pages/comming-soon.css
@@ -1,26 +1,44 @@
 /* vendors */
-@import '../vendors/font-awesome.min.css';
+@import "../vendors/font-awesome.min.css";
 
 /* base */
-@import '../base/main.css';
-@import '../base/layout.css';
+@import "../base/main.css";
+@import "../base/layout.css";
 
-/* components */
-@import '../components/clock.css';
-@import '../components/progress-bar.css';
-@import '../components/mouse.css';
-@import '../components/socials.css';
+/* Components */
+@import "../components/mouse.css";
+@import "../components/clock.css";
+@import "../components/progress-bar.css";
+@import "../components/socials.css";
+@import "../components/form.css";
 
 /* custom */
 
+.back_to_top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3rem;
+  height: 3rem;
+  background-color: #ec1d61;
+  color: #fff;
+  position: absolute;
+  top: -2rem;
+  right: -1rem;
+  border-radius: 50%;
+  box-shadow: 0 0.2rem 0.4rem #0006;
+  text-decoration: none;
+}
+
 .footer {
-  padding-top: 0;
   color: #fffc;
+  padding-top: 0;
 }
 .footer p a {
   color: #fff;
   text-decoration: none;
 }
+
 .footer p a:hover {
   text-decoration: underline;
 }
@@ -28,24 +46,25 @@
 .trio {
   display: flex;
   gap: 1rem;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 .trio > p {
   position: relative;
 }
 .trio > p::after {
-  content: '';
+  content: "";
   display: block;
   width: 0.1rem;
   height: 1em;
-  margin-left: 0.7rem;
   background-color: #fff;
+  margin-left: 0.7rem;
   position: absolute;
   top: 50%;
-  right: -0.55rem;
   transform: translateY(-50%);
+  right: -0.55rem;
 }
+
 .trio > p:last-child::after {
   display: none;
 }
@@ -54,6 +73,7 @@
   .trio {
     flex-direction: column;
   }
+
   .trio > p::after {
     display: none;
   }
